# ShadowContainers

./: .gitignore  CMakeLists.txt  README.md
include/: shadows.hpp
include/shadows_impl/: shadow_array.tpp  shadow_element.tpp  shadow_static.tpp
test/: CMakeLists.txt  test.cpp
